<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="Network" >
        <ListPreference
            android:defaultValue="Wi-Fi"
            android:entries="@array/listArray"
            android:entryValues="@array/listValues"
            android:key="listPref"
            android:summary="Network connectivity required"
            android:title="Network communication" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Privacy" >
        <com.www.client.SwitchPref
            android:id="@+id/privacy_regions_id"
            android:key="@string/privacy_regions_status"
            android:title="@string/privacy_regions_title"
            android:defaultValue="false" >
        </com.www.client.SwitchPref>
        <Preference
            android:id="@+id/privacy_mechanisms_id"
            android:key="@string/privacy_mechanisms_key"
            android:summary="@string/privacy_mechanisms_summary"
            android:title="@string/privacy_mechanisms_title" >
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="Device" >
        <Preference
            android:id="@+id/device_unregister"
            android:key="device_unregister"
            android:summary="Unregister device"
            android:title="Unregister" >
        </Preference>
    </PreferenceCategory>


</PreferenceScreen>